PAI - 링크 추가 Docker - CI/CD 파이프라인 공부

--- a/docs/_posts/algorithms/2021-04-18-PAI-ch17-179.md
+++ b/docs/_posts/algorithms/2021-04-18-PAI-ch17-179.md
@@ -140,3 +140,4 @@ def largestNumber3(self, nums: List[int]) -> str:
 - 아래 내용 참조
   - [Why does dividing by 9 cause a repeating decimal?](https://qr.ae/pGIIa0)
   - [REPEATING DECIMLAS](https://mrafisher.weebly.com/the-learning-never-stops/repeating-decimlas)
+  - [The Number 9, Not So Magic After All](https://www.dsprelated.com/showarticle/645.php)
