--- a/docs/_posts/algorithms/2021-04-25-PAI-ch18-33.md
+++ b/docs/_posts/algorithms/2021-04-25-PAI-ch18-33.md
@@ -52,9 +52,9 @@ Explanation: 2 does not exist in nums so return -1
 
 #### 1 생각
 
-- 정렬은 되어 있는데, 어떤 인덱스에서 회전을 했다.
-- 그러면 회전이 된 피벗 인덱스를 찾으면, 정렬된 배열을 그대로 사용 가능
-- 피벗은? 가장 작은 수가 위치하는 지점
+- 이진 탐색은 정렬된 배열을 절반으로 쪼개면서 탐색해 나간다
+- nums 자체는 유지하면서 찾으려는 값의 인덱스를 찾아간다
+- `dfs`처럼 재귀적으로 범위를 좁혀 나가면 될 것 같다
 
 #### 1 코드
 
@@ -86,6 +86,11 @@ def search(self, nums: List[int], target: int) -> int:
 
     return ans
 ```
+
+- 문제를 풀면서 조건을 추가해 나가서 가독성이 좋지 않다
+- 아래 책풀이의 `search_recursion`가 위의 코드를 보다 깔끔하게 정리한 것 같다. 위의 코드를 반면교사로... 삼자...
+- 말로 설명하면서, 그 설명에 따라 문제를 푸는데, 그러다 보니 나중에 조건이 추가되는 경우가 많다
+- 정의하려는 함수의 내용, 파라미터, 결과 값 등으로 미리 조건들을 정리할 줄 알아야 할 것 같다
 
 #### 1 결과: 성공
 
