--- a/docs/_posts/database/2021-07-21-postgres-1.architecture.md
+++ b/docs/_posts/database/2021-07-21-postgres-1.architecture.md
@@ -19,8 +19,15 @@ categories: [db, postgres]
   - [프로세스](#프로세스)
     - [`Postmaster`](#postmaster)
       - [`postgres`](#postgres)
-      - [하는 일](#하는-일)
+      - [`postgres`가 하는 일?](#postgres가-하는-일)
     - [`Background`](#background)
+      - [`logger`](#logger)
+      - [`checkpointer`](#checkpointer)
+      - [`background writer`](#background-writer)
+      - [`wal writer`](#wal-writer)
+      - [`autovacuum launcer`](#autovacuum-launcer)
+      - [`archiver`](#archiver)
+      - [`stats collector`](#stats-collector)
     - [`Backend`](#backend)
       - [`work_mem` 파라미터](#work_mem-파라미터)
       - [`maintenance_work_mem` 파라미터](#maintenance_work_mem-파라미터)
@@ -38,6 +45,17 @@ categories: [db, postgres]
       - [테이블 데이터 저장 파일](#테이블-데이터-저장-파일)
       - [테이블 여유 공간 관리 파일](#테이블-여유-공간-관리-파일)
       - [테이블 블록 visibility 관리 파일](#테이블-블록-visibility-관리-파일)
+      - [`template0`, `template1` `postgres` 데이터베이스](#template0-template1-postgres-데이터베이스)
+      - [사용자 DB 생성](#사용자-db-생성)
+      - [`pg_global` 테이블스페이스](#pg_global-테이블스페이스)
+      - [사용자 테이블스페이스 생성](#사용자-테이블스페이스-생성)
+        - [사용자 테이블스페이스와 사용자 테이블](#사용자-테이블스페이스와-사용자-테이블)
+      - [테이블스페이스 LOCATION 변경 방법](#테이블스페이스-location-변경-방법)
+  - [`VACUUM`](#vacuum)
+    - [하는 일?](#하는-일)
+  - [ORACLE vs PostgreSQL](#oracle-vs-postgresql)
+    - [`MVCC` 모델의 차이점](#mvcc-모델의-차이점)
+    - [Shared Pool 존재 여부](#shared-pool-존재-여부)
 
 # 개요
 
@@ -171,7 +189,7 @@ lrwxrwxrwx. 1 root root 8  5월 18 22:23 /usr/pgsql-13/bin/postmaster -> postgre
 - 여러 데이터베이스 클러스터가 서로 다른 data area와 통신 포트를 사용할 경우, 여러 `postgres` 인스턴스가 한 시스템에서 실행될 수 있다
 - `-D` 옵션 또는 `PGDATA` 환경변수로 반드시 data area 영역이 지정되어야 한다
 
-#### 하는 일
+#### `postgres`가 하는 일?
 
 - 초기 기동 시
   - 복구 작업
@@ -182,15 +200,36 @@ lrwxrwxrwx. 1 root root 8  5월 18 22:23 /usr/pgsql-13/bin/postmaster -> postgre
 ### `Background`
 
 - pgsql 운영에 필요한 백그라운드 프로세스
-  - `logger`: 에러 메시지를 로그 파일에 기록
-  - `checkpointer`: 체크포인트 발생 시 dirty 버퍼를 파일에 기록
-  - `writer`: 주기적으로 dirty 버퍼를 파일에 기록
-  - `wal writer`: WAL 버퍼 내용을 WAL 파일에 기록
-  - `autovacuum launcer`: `Vacuum` 필요 시점에 `autovacuum worker`를 fork
-  - `archiver`: Archive log 모드일 때, WAL 파일을 지정된 디렉토리에 복사
-  - `stats collector`: DBMS 사용 통계 정보 수집
-    - `pg_stat_activity`: 세션 수행 정보
-    - `pg_stat_all_tables`: 테이블 사용 통계 정보
+
+#### `logger`
+
+- 에러 메시지를 로그 파일에 기록
+
+#### `checkpointer`
+
+- 체크포인트 발생 시 dirty 버퍼를 파일에 기록
+
+#### `background writer`
+
+- 주기적으로 dirty 버퍼를 파일에 기록
+
+#### `wal writer`
+
+- WAL 버퍼 내용을 WAL 파일에 기록
+
+#### `autovacuum launcer`
+
+- `Vacuum` 필요 시점에 `autovacuum worker`를 fork
+
+#### `archiver`
+
+- Archive log 모드일 때, WAL 파일을 지정된 디렉토리에 복사
+
+#### `stats collector`
+
+- DBMS 사용 통계 정보 수집
+  - `pg_stat_activity`: 세션 수행 정보
+  - `pg_stat_all_tables`: 테이블 사용 통계 정보
 
 ### `Backend`
 
@@ -290,3 +329,255 @@ lrwxrwxrwx. 1 root root 8  5월 18 22:23 /usr/pgsql-13/bin/postmaster -> postgre
 #### 테이블 블록 visibility 관리 파일
 
 - 파일명: `OID_vm`
+
+#### `template0`, `template1` `postgres` 데이터베이스
+
+- `pg_database` 뷰 조회
+
+```sql
+SELECT
+  oid,
+  datname,
+  datistemplate,
+  datallowconn
+FROM pg_database
+ORDER BY 1;
+
+  oid  |  datname  | datistemplate | datallowconn
+-------+-----------+---------------+--------------
+     1 | template1 | t             | t
+ 13437 | template0 | t             | f
+ 13438 | postgres  | f             | t
+(3개 행)
+```
+
+- `datistemplate`? 사용자 데이터베이스 생성 위한 template용 데이터베이스 의미
+- `datallowconn`? 데이터베으스 접속 가능 여부
+- 템플릿은 왜 2개?
+  - `template0`: 초기 상태 템플릿을 제공
+  - `template1`: `tmplate0` + 사용자 추가 오브젝트
+- `postgres`?
+  - `template1` 이용해서 생성된 기본 데이터베이스.
+  - 접속 시에 데이터베이스 지정하지 않으면 `postgres` 데이터베이스로 접속
+- 기본 데이터베이스들로 `pg_default` 테이블스페이스에 저장되며, 물리적 위치는 `$PGDATA/base`다
+
+```SQL
+SELECT
+  a.oid,
+  a.datname,
+  a.datistemplate,
+  a.datallowconn,
+  a.datconnlimit,
+  a.dattablespace,
+  b.spcname
+FROM pg_database a
+JOIN pg_tablespace b
+  ON b.oid = a.dattablespace;
+
+  oid  |  datname  | datistemplate | datallowconn | datconnlimit | dattablespace |  spcname
+-------+-----------+---------------+--------------+--------------+---------------+------------
+ 13438 | postgres  | f             | t            |           -1 |          1663 | pg_default
+     1 | template1 | t             | t            |           -1 |          1663 | pg_default
+ 13437 | template0 | t             | f            |           -1 |          1663 | pg_default
+```
+
+- `$PGDATA/base` 내용을 보면 `OID`와 일치하는 디렉토리가 있음을 볼 수 있다.
+
+```
+# systemctl show -p Environment postgresql-13.service
+Environment=PGDATA=/var/lib/pgsql/13/data/ PG_OOM_ADJUST_FILE=/proc/self/oom_score_adj PG_OOM_ADJUST_VALUE=0
+
+[root@vultr ~]# ll /var/lib/pgsql/13/data/base/
+합계 12
+drwx------. 2 postgres postgres 4096  7월 21 21:31 1
+drwx------. 2 postgres postgres 4096  7월 21 21:31 13437
+drwx------. 2 postgres postgres 4096  7월 24 01:07 13438
+```
+
+- 구조
+
+```
+ tmplate0       tmplate1          사용자db
+[template0]    [template0]      [template1]
+               [템플릿추가]   [사용자 오브젝트]
+```
+
+#### 사용자 DB 생성
+
+-- `template` 데이터베이스에 접속하여 사용자 테이블 `t1`을 생성
+
+```sql
+postgres=# \c template1
+접속정보: 데이터베이스="template1", 사용자="postgres".
+template1=# CREATE TABLE t1 (c1 INTEGER);
+CREATE TABLE
+template1=# \d+ t1
+                               "public.t1" 테이블
+ 필드명 |  종류   | Collation | NULL허용 | 초기값 | 스토리지 | 통계수집량 | 설명
+--------+---------+-----------+----------+--------+----------+------------+------
+ c1     | integer |           |          |        | plain    |            |
+접근 방법: heap
+```
+
+- 사용자 데이터베이스 생성 후 테이블 확인해보면 `template1`에서 생성했던 `t1` 테이블 복제된 것 확인 가능
+
+```sql
+postgres=# CREATE DATABASE db_aimpugn;
+CREATE DATABASE
+postgres=# \c db_aimpugn
+접속정보: 데이터베이스="db_aimpugn", 사용자="postgres".
+db_aimpugn=# \dt+
+                     릴레이션(relation) 목록
+ 스키마 | 이름 |  종류  |  소유주  | Persistence |  크기   | 설명
+--------+------+--------+----------+-------------+---------+------
+ public | t1   | 테이블 | postgres | permanent   | 0 bytes |
+(1개 행)
+
+```
+
+#### `pg_global` 테이블스페이스
+
+- `데이터베이스 클러스터` 레벨에서 관리해야 할 데이터들을 저장. 어떤 db에서 조회해도 동일 정보 제공.
+  - `pg_database`
+  - `pg_authid` 등
+
+#### [사용자 테이블스페이스 생성](https://www.postgresql.org/docs/13/sql-createtablespace.html)
+
+- 디렉토리는 만들어주지 않으며, 반드시 존재해야 한다.
+
+```
+[root@vultr home]# mkdir /home/data
+[root@vultr home]# chown -R postgres:postgres /home/data
+```
+
+- 임의의 테이블스페이스를 생성
+
+```sql
+-- 경로는 절대경로 지정해야 한다
+postgres=# CREATE TABLESPACE tspc_aimpugn LOCATION '/home/data';
+CREATE TABLESPACE
+```
+
+- `$PGDATA/pg_tblspce`에 심볼릭 링크가 생성
+
+```
+[root@vultr home]# ll $PGDATA/pg_tblspc
+합계 0
+lrwxrwxrwx. 1 postgres postgres 10  7월 25 17:38 16396 -> /home/data
+```
+
+##### 사용자 테이블스페이스와 사용자 테이블
+
+- `postgres` 데이터베이스
+
+```sql
+db_aimpugn=# \c postgres
+접속정보: 데이터베이스="postgres", 사용자="postgres".
+postgres=# CREATE TABLE t1 (c1 INTEGER) TABLESPACE tspc_aimpugn;
+CREATE TABLE
+postgres=# SELECT oid FROM pg_class WHERE relname = 't1';
+  oid
+-------
+ 16398
+(1개 행)
+```
+
+- `db_aimpugn` 데이터베이스
+
+```sql
+-- 이미 t1 테이블 있음
+db_aimpugn=# CREATE TABLE t1 (c1 INTEGER) TABLESPACE tspc_aimpugn;
+오류:  "t1" 이름의 릴레이션(relation)이 이미 있습니다
+db_aimpugn=# \d+ t1
+                               "public.t1" 테이블
+ 필드명 |  종류   | Collation | NULL허용 | 초기값 | 스토리지 | 통계수집량 | 설명
+--------+---------+-----------+----------+--------+----------+------------+------
+ c1     | integer |           |          |        | plain    |            |
+접근 방법: heap
+
+db_aimpugn=# DROP TABLE t1;
+DROP TABLE
+db_aimpugn=# CREATE TABLE t1 (c1 INTEGER) TABLESPACE tspc_aimpugn;
+CREATE TABLE
+db_aimpugn=# \d+ t1
+                               "public.t1" 테이블
+ 필드명 |  종류   | Collation | NULL허용 | 초기값 | 스토리지 | 통계수집량 | 설명
+--------+---------+-----------+----------+--------+----------+------------+------
+ c1     | integer |           |          |        | plain    |            |
+테이블스페이스: "tspc_aimpugn"
+접근 방법: heap
+
+-- OID 확인
+db_aimpugn=# SELECT oid FROM pg_class WHERE relname = 't1';
+  oid
+-------
+ 16401
+(1개 행)
+```
+
+- `tspc_aimpugn` 테이블스페이스의 공간인 `/home/data`을 확인해 보면
+
+```js
+[root@vultr data]# tree
+.
+└── PG_13_202007201
+    ├── 13438 // postgres
+    │   └── 16398 // t1
+    └── 16397 // db_aimpugn
+        └── 16401 // t1
+```
+
+- `테이블스페이스 > DB > 테이블` 뎁스로 형성됨을 확인할 수 있다
+
+```sql
+ oid  |  datname   | datistemplate | datallowconn | datconnlimit | dattablespace |  spcname
+-------+------------+---------------+--------------+--------------+---------------+------------
+ 13438 | postgres   | f             | t            |           -1 |          1663 | pg_default
+     1 | template1  | t             | t            |           -1 |          1663 | pg_default
+ 13437 | template0  | t             | f            |           -1 |          1663 | pg_default
+ 16397 | db_aimpugn | f             | t            |           -1 |          1663 | pg_default
+```
+
+#### 테이블스페이스 LOCATION 변경 방법
+
+- pgsql의 테이블스페이스는 디렉토리 지정 방식으로, 해당 디렉토리의 용량이 가득 차면 더 이상 데이터 저장할 수 없는데, 이런 문제 해결 위해서는 `볼류 매니저` 이용
+- 작업 순서
+  - pgsql 종료  `systemctl stop postgresql-13`
+  - 테이블스페이스 LOCATION을 새로운 파일시스템으로 복사  `cp -rp /home/data/PG* <새경로>`
+  - pg_tblspc 디렉토리 내용 확인  `ll $PGDATA/pg_tblpsc`
+  - 심볼릭 링크 삭제  `rm 12345`
+  - 새로운 심볼릭링크 생성  `ln -s <새경로> 12345`
+  - 내용 확인  `ll $PGDATA/pg_tblpsc`
+  - pgsql 재시작  `systemctl start postgresql-13`
+
+## `VACUUM`
+
+### 하는 일?
+
+1. 테이블 및 인덱스 통계 정보 수집(일반 DBMS 작업)
+2. 테이블 재구성(일반 DBMS 작업)
+3. 테이블 및 인덱스 DEAD 블록 정리(pgsql MVCC 특징 때문에 필요한 작업)
+4. XID Wraparound 방지 위한 레코드별 XID Frozen(pgsql MVCC 특징 때문에 필요한 작업)
+
+## ORACLE vs PostgreSQL
+
+- 가장 큰 차이점은 MVCC 모델 구현 방식과 Shared Pool 존재 여부
+
+| 항목                  | ORACLE        | PostgreSQL                 |
+| --------------------- | ------------- | -------------------------- |
+| `MVCC` 모델 구현 방식 | UNDO 세그먼트 | 블록 내에 이전 레코드 저장 |
+| Shared Pool 존재 여부 | 존재          | 존재하지 않음              |
+
+### `MVCC` 모델의 차이점
+
+- 동시성 높이기 위해서는 다음 원칙을 지켜야 한다
+  - 읽기 작업은 쓰기 작업을 블로킹하지 않고
+  - 쓰기 작업은 읽기 작업을 블로킹하지 않아야 한다
+- `MVCC`?
+  - Multi Version Concurrency Control
+  - 동시성 높이기 위한 원칙 구현에 필요
+
+### Shared Pool 존재 여부
+
+- PostgreSQL은 Shared Pool 대신 프로세스 레벨에서 SQL 정보를 공유하는 기능을 제공
+- 하나의 프로세스에서 같은 SQL을 여러 번 수행하면 최초 1회만 하드 파싱
