--- a/docs/_posts/database/2021-07-25-db-mvcc.md
+++ b/docs/_posts/database/2021-07-25-db-mvcc.md
@@ -103,8 +103,12 @@ categories: [db, mvcc]
 | XMIN 10 | XMAX -- | TUPLE 3 |
 
 - TUPLE 2 업데이트
-  - **OLD** TUPLE 2: `XID 30`일 때, 기존 TUPLE 2의 `XMAX`에 `XID 30` 세팅하여 OLD 버전임을 표시  $\to$ `XID 10`부터 `XID 30` 범위에서 visible한 값
-  - **NEW** TUPLE 2: **`XID 30`부터 현재까지 유효** 의미
+  - **OLD** TUPLE 2:
+    - `XID 30`일 때, 기존 TUPLE 2의 `XMAX`에 `XID 30` 세팅하여 OLD 버전임을 표시
+    - $\to$ `XID 10`부터 `XID 30` 범위에서 visible한 값
+  - **NEW** TUPLE 2:
+    - `XMIN`의 `XID 30`, `XMAX`는 없음
+    - $\to$ **`XID 30`부터 현재까지 유효** 의미
 
 |             |             |                 |
 | ----------- | ----------- | --------------- |
@@ -121,7 +125,8 @@ categories: [db, mvcc]
     - T2: `XID 30`
     - T3: `XID 40`
 
-1. T1 시점: *SESSION-1* SELECT$\to$ TUPLE 1, TUPLE 2, TUPLE 3 조회
+- T1 시점: *SESSION-1* OPEN
+  - *SESSION-1* SELECT $\to$ TUPLE 1, TUPLE 2, TUPLE 3 조회
 
 ```
 PAGE HEADER
@@ -131,7 +136,10 @@ PAGE HEADER
       [TUPLE 3][TUPLE 2][TUPLE 1][PAGE TAIL]
 ```
 
-1. T2 시점: UPDATE TUPLE 2하면 새로운 NEW TUPLE 2가 추가되고, OLD TUPLE 2는 XMAX에 유효한 XID 범위값 세팅
+- T2 시점:
+  - UPDATE TUPLE 2
+  - $\to$ 새로운 NEW TUPLE 2가 추가
+  - $\to$ OLD TUPLE 2는 XMAX에 유효한 XID 범위값 세팅
 
 ```
 PAGE HEADER
@@ -141,16 +149,20 @@ PAGE HEADER
   [TUPLE 3][OLD TUPLE 2][TUPLE 1][PAGE TAIL]
 ```
 
-3. T3 시점: *SESSION-3* OPEN
-
-- *SESSION-1* SELECT$\to$ TUPLE 1, **OLD** TUPLE 2, TUPLE 3 조회
-- *SESSION-3* SELECT$\to$ TUPLE 1, **NEW** TUPLE 2, TUPLE 3 조회
+- T3 시점: *SESSION-3* OPEN
+  - *SESSION-1* SELECT $\to$ TUPLE 1, **OLD** TUPLE 2, TUPLE 3 조회
+  - *SESSION-3* SELECT $\to$ TUPLE 1, **NEW** TUPLE 2, TUPLE 3 조회
 
 ### 두번째 흐름
 
 - 1986년 Bob Miner는 오라클 version 6에서 `Rollback Segment` 도입하여 MVCC 구현
 - `Rollback segment` 메커니즘
-  - UPDATE 실행  $\to$ 기존 데이터 블록 내의 데이터 레코드를 New Version으로 변경  $\to$Old Version을 별도의 저장소인 롤백 세그먼드에 보관
-  - SELECT 실행 시 SELECT SCN과 데이터 블록의 SCN을 비교  $\to$ Consistent Read가 필요하다고 판단  $\to$ 롤백 세그먼트의 Old Version을 읽어서 버퍼캐시에 CR 블록을 생성
+  - UPDATE 실행
+    - $\to$ 기존 데이터 블록 내의 데이터 레코드를 New Version으로 변경
+    - $\to$ Old Version을 별도의 저장소인 롤백 세그먼드에 보관
+  - SELECT 실행
+    - $\to$ SELECT SCN과 데이터 블록의 SCN을 비교
+    - $\to$ Consistent Read가 필요하다고 판단
+    - $\to$ 롤백 세그먼트의 Old Version을 읽어서 버퍼캐시에 CR 블록을 생성
   - SELECT 쿼리의 Snapshot Read를 보장
   - `Ora-1555 snapshot too old`라는 한계점 제외하고는 동시성을 극대화해주는 최고의 방법이었다
