--- a/docs/_posts/database/2021-07-25-db-mvcc.md
+++ b/docs/_posts/database/2021-07-25-db-mvcc.md
@@ -22,6 +22,7 @@ categories: [db, mvcc]
     - [첫번째 흐름](#첫번째-흐름)
       - [`MGA` 예제](#mga-예제)
     - [두번째 흐름](#두번째-흐름)
+      - [`Rollback segment` 예제](#rollback-segment-예제)
 
 # RDBMS와 MVCC 아키텍처
 
@@ -159,10 +160,37 @@ PAGE HEADER
 - `Rollback segment` 메커니즘
   - UPDATE 실행
     - $\to$ 기존 데이터 블록 내의 데이터 레코드를 New Version으로 변경
-    - $\to$ Old Version을 별도의 저장소인 롤백 세그먼드에 보관
+    - $\to$ Old Version을 별도의 저장소인 `Rollback segment`에 보관
   - SELECT 실행
-    - $\to$ SELECT SCN과 데이터 블록의 SCN을 비교
-    - $\to$ Consistent Read가 필요하다고 판단
-    - $\to$ 롤백 세그먼트의 Old Version을 읽어서 버퍼캐시에 CR 블록을 생성
+    - $\to$ `SELECT SCN(System Change Number)`과 `데이터 블록의 SCN(System Change Number)`을 비교
+    - $\to$ **Consistent Read**가 필요하다고 판단
+    - $\to$ 롤백 세그먼트의 Old Version을 읽어서 버퍼캐시에 `CR(Consistence Read) 블록`을 생성
   - SELECT 쿼리의 Snapshot Read를 보장
   - `Ora-1555 snapshot too old`라는 한계점 제외하고는 동시성을 극대화해주는 최고의 방법이었다
+
+#### `Rollback segment` 예제
+
+| data block                       | undo block                 |
+| -------------------------------- | -------------------------- |
+| ITL(Interested Transaction List) | TX(Transaction) Table Slot |
+| Data Row `A`                     |                            |
+
+| data block                       |        | undo block                      |
+| -------------------------------- | ------ | ------------------------------- |
+| ITL(Interested Transaction List) | ┬XID─> | TX(Transaction) Table Slot ┐UBA |
+| Data Row (new Image `B`)         | └UBA─> | Undo Record(Old Image `A`)<┘    |
+
+- `ITL`?
+  - [`Interested Transaction List`](https://datacadamia.com/db/oracle/transaction_table)의 약자이며, `transaction table`이라고도 한다
+  - [ITL structure in detail](https://avdeo.com/2008/06/16/interested-transaction-list-itl/) 참고
+    - Variable header는 위에서 아래로 필요에 따라 증가하고, row는 아래에서 위로 증가
+    - ITL은 variable portion of data block header에 위치한다(그러니까 Variable header...?)
+    - 이 데이터 블록 헤더의 가변 영역은 트랜잭션에 대한 슬롯들을 갖는다
+      - 만약 어떤 row가 lock 된다면? $\to$ 트랜잭션은 lock 된 row의 rowid와 함께 한 슬롯에 lock을 넣는다
+      - 달리 말하자면, **트랜잭션이 해당 row에 관심이 있다고 표시**하는 것(그래서 *Interested Transaction List*다)
+- `UBA`?
+  - `Undo Block Address`
+- `Consistence Read`?
+  - [[Oracle] 문장수준 읽기 일관성 Consistent Mode, Current Mode 차이 :: 마이자몽](https://myjamong.tistory.com/195) 참고
+  - `Consistent`? 일관된, 언행이 일치된, 모순이 없는
+  - Consistent Read 위해서, SELECT 시점에 SCN을 비교해서 Undo Segment에 존재하는 해당 Old Versions을 찾아서 버퍼 캐시에 CR 블록 생성
