--- a/docs/_posts/database/2021-07-21-postgres-1.architecture.md
+++ b/docs/_posts/database/2021-07-21-postgres-1.architecture.md
@@ -361,7 +361,7 @@ ORDER BY 1;
   - 접속 시에 데이터베이스 지정하지 않으면 `postgres` 데이터베이스로 접속
 - 기본 데이터베이스들로 `pg_default` 테이블스페이스에 저장되며, 물리적 위치는 `$PGDATA/base`다
 
-```SQL
+```sql
 SELECT
   a.oid,
   a.datname,
