--- a/docs/_posts/database/2021-07-25-db-mvcc.md
+++ b/docs/_posts/database/2021-07-25-db-mvcc.md
@@ -170,10 +170,14 @@ PAGE HEADER
 
 #### `Rollback segment` 예제
 
+- 업데이트 전
+
 | data block                       | undo block                 |
 | -------------------------------- | -------------------------- |
 | ITL(Interested Transaction List) | TX(Transaction) Table Slot |
 | Data Row `A`                     |                            |
+
+- 업데이트 후
 
 | data block                       |        | undo block                      |
 | -------------------------------- | ------ | ------------------------------- |
