--- a/docs/_posts/database/2021-07-25-db-mvcc.md
+++ b/docs/_posts/database/2021-07-25-db-mvcc.md
@@ -23,6 +23,21 @@ categories: [db, mvcc]
       - [`MGA` 예제](#mga-예제)
     - [두번째 흐름](#두번째-흐름)
       - [`Rollback segment` 예제](#rollback-segment-예제)
+  - [DBMS별 MVCC 메커니즘 비교](#dbms별-mvcc-메커니즘-비교)
+    - [비교 내용](#비교-내용)
+      - [TX 식별자](#tx-식별자)
+      - [Old Version 저장 위치](#old-version-저장-위치)
+      - [Old Version 포인터](#old-version-포인터)
+      - [레코드 포인터](#레코드-포인터)
+      - [페이지 내 레코드 저장 순서](#페이지-내-레코드-저장-순서)
+      - [COMMIT 시점의 Action](#commit-시점의-action)
+      - [ReadView 사용 여부](#readview-사용-여부)
+      - [레코드 헤더 크기](#레코드-헤더-크기)
+      - [트랜잭션 리스트 관리](#트랜잭션-리스트-관리)
+    - [트랜잭션 처리 위한 ID](#트랜잭션-처리-위한-id)
+      - [Oracle](#oracle)
+      - [PostgreSQL](#postgresql)
+      - [MySQL/InnoDB](#mysqlinnodb)
 
 # RDBMS와 MVCC 아키텍처
 
@@ -198,3 +213,118 @@ PAGE HEADER
   - [[Oracle] 문장수준 읽기 일관성 Consistent Mode, Current Mode 차이 :: 마이자몽](https://myjamong.tistory.com/195) 참고
   - `Consistent`? 일관된, 언행이 일치된, 모순이 없는
   - Consistent Read 위해서, SELECT 시점에 SCN을 비교해서 Undo Segment에 존재하는 해당 Old Versions을 찾아서 버퍼 캐시에 CR 블록 생성
+
+## DBMS별 MVCC 메커니즘 비교
+
+### 비교 내용
+
+#### TX 식별자
+
+- Oracle
+  - TX 시작:
+    - 무엇을? 트랜잭션 테이블의 위치정보인 `XID(위치 정보)`를
+    - 어디에? 블록의 `ITL`에 저장
+  - TX 완료:
+    - 무엇을? TX 수행되면서 증가하는 `SCN(시간 정보)`을
+    - 어디에? `트랜잭션 테이블`과 `ITL`에 저장
+- PostgreSQL
+  - TX 시작:
+    - 무엇을? TX 수행되면서 증가하는 `XID(시간 정보)`
+    - 어디에? `튜플 헤더`에
+    - 어떻게? `t_xmin`, `t_xmax` 컬럼에 저장
+- MySQL
+  - TX 시작:
+    - 무엇을? TX 수행되면서 증가하는 `TRX_ID(시간 정보)`를
+    - 어디에? `레코드 헤더`에 저장
+  - TX 완료:
+    - 무엇을? `TRX_ID(시간 정보)`를
+    - 어디에? `언두 블록`에 저장
+
+#### Old Version 저장 위치
+
+- Oracle: 별도로 분리된 `언두 세그먼트`에 저장
+- PostgreSQL: `동일 데이터 페이지`에 저장
+- MySQL: 별도로 분리된 `언두 세그먼트`에 저장
+
+#### Old Version 포인터
+
+- Oracle: `UBA(Undo Block Address)`
+- PostgreSQL: `T_CTID(Current Tuple ID)`
+- MySQL: `Roll Pointer`
+
+#### 레코드 포인터
+
+- Oracle: `Row offset`
+- PostgreSQL: `Line pointer`
+- MySQL: `Directory Slot`
+
+#### 페이지 내 레코드 저장 순서
+
+- Oracle: 블록 아래 $\to$ 블록 위
+- PostgreSQL: 페이지 아래 $\to$ 페이지 위
+- MySQL: 페이지 헤더 $\to$ 페이지 아래
+
+#### COMMIT 시점의 Action
+
+- Oracle: 블록 클린 아웃
+- PostgreSQL: 튜플헤더 `t_nfomask` 칼럼에 상태정보 업데이트
+- MySQL:
+  - 페이지 클린 아웃 없음.
+  - `언두 블록`의 `TRX_NO` 컬럼에 `TRX_ID(시간 정보)` 저장
+  - `히스터리 리스트` 등록
+  - `TRX_SYS`의 `TRX_STRUCTURE` 더블 링크트 리스트에서 제외
+
+#### ReadView 사용 여부
+
+- Oracle: ReadView 사용하지 않음
+- PostgreSQL: Snapshot Structure 사용
+- MySQL: ReadView 사용
+
+#### 레코드 헤더 크기
+
+- Oracle: 3 Bytes +
+- PostgreSQL: 24 Bytes
+- MySQL: 18 Bytes +
+
+#### 트랜잭션 리스트 관리
+
+- Oracle: `언두 헤더`에 위치한 `트랜잭션 테이블`. v$transaction
+- PostgreSQL: `pg_log` 디렉토리 아래에 256 Kbyte의 `clog` 파일들
+- MySQL:
+  - `언두 세그먼트`의 `언두 블록`에 저장
+  - `TRX_SYS`의 `TRX_STRUCTURE` 더블 링크트 리스트
+
+### 트랜잭션 처리 위한 ID
+
+#### Oracle
+
+- `XID(공간 정보)`와 `SCN(시간 정보)`를 적절하게 조합하여 사용
+  - `XID`:
+    - 언두 정보가 기록되는 *위치*에 관한 정보
+    - 언제? 트랜잭션 시작 시 할당
+    - 어떻게? `Undo Segment#` + `Slot#` + `Wrap#`
+  - `SCN(System Change Number)`
+    - 시간에 따라 증가하는 시간 정보
+    - 언제? 트랜잭션 COMMIT 시 할당
+    - 어떻게? 6 Bytes 데이터
+
+#### PostgreSQL
+
+- `XID(시간 정보)`를 `t_xmin`과 `t_xmax`를 적절하게 조합하여 사용
+  - `XID`
+    - 언제? 트랜잭션 시작 시점에만 할당
+    - INSERT 시? `t_xmin`에 저장
+    - DELETE 시? `t_xmax`에 저장
+    - MySQL/InnoDB의 ReadView와 비슷한 `Snapshop Structure`에서 SELECT 시작 시점의 ACTIVE TX 리스트 관리해야 한다
+
+#### MySQL/InnoDB
+
+- `TRX_ID(시간 정보)`
+  - 언제? 트랜잭션 시작 시점
+  - 어디에? `페이지의 데이터 레코드`에 저장
+- `TRX_NO`
+  - 언두 블록을 회수하기 위한 비교 시점으로 사용
+  - 언제? COMMIT 시
+  - 무엇을? `TRX_ID`를
+  - 어디에? 언두 블록의 `TRX_NO` 컬럼에 저장
+- 레코드의 Visibility는 세션마다 생성되는 Readview의 `Up_Limit_ID`, `Low_Limit_ID`, `Active TX List`에 의해 결정
