아이고 졸려

--- a/docs/_posts/database/2021-07-25-db-mvcc.md
+++ b/docs/_posts/database/2021-07-25-db-mvcc.md
@@ -90,7 +90,7 @@ categories: [db, mvcc]
 
 - Jim Starkey
   - $\to$ 최초로 Rdb/ELN 제품에 처음으로 MVCC 아키텍처 도입
-  - $\to$ 두번째로 Interbase DB에 발전시킨 MVCC 도입하는데, `Multi Generation Architecture(MGA)`라고 한다
+  - $\to$ 두번째로 Interbase DB에 발전시킨 MVCC 도입하는데, `Multi Generation Architecture(MGA, 추기형)`라고 한다
 
 #### 1986년
 
@@ -104,6 +104,8 @@ categories: [db, mvcc]
 
 ### 첫번째 흐름
 
+- PostgreSQL, Firebird/Interbase, SQL Server 등
+- 데이터베이스 내에 다중 버전의 레코드 저장하고 더 이상 필요하지 않을 때 모아둔 레코드 버림
 - `Multi Generation Architecture, MGA`
   - Tuple 업데이트 시 새로운 값으로 대체하지 않고, 동일한 데이터 페이지 내에서 New Tuple을 새롭게 추가하고 Old Tuple은 유효 범위를 마킹하여 처리
 
@@ -171,6 +173,8 @@ PAGE HEADER
 
 ### 두번째 흐름
 
+- Oracle, MySQL/InnoDB 등
+- 최신 버전의 데이터만 데이터베이스 내에 저장하고 언두를 이용하여 이전 버전 데이터 재구성
 - 1986년 Bob Miner는 오라클 version 6에서 `Rollback Segment` 도입하여 MVCC 구현
 - `Rollback segment` 메커니즘
   - UPDATE 실행
@@ -298,6 +302,10 @@ PAGE HEADER
 
 #### Oracle
 
+![oracle_tx_id](./../../assets/images/db/mvcc/oracle_tx_id.PNG)
+출처:exem
+
+- XID 생성 $\to$ 언두 헤더의 TX 테이블에 저장 $\to$ SCN을 언두 헤더에 저장 $\to$ 최신 데이터에 유지되던 SCN과 언두 블록의 SCN을 비교하여 예전 데이터로 찾아간다
 - `XID(공간 정보)`와 `SCN(시간 정보)`를 적절하게 조합하여 사용
   - `XID`:
     - 언두 정보가 기록되는 *위치*에 관한 정보
@@ -307,8 +315,14 @@ PAGE HEADER
     - 시간에 따라 증가하는 시간 정보
     - 언제? 트랜잭션 COMMIT 시 할당
     - 어떻게? 6 Bytes 데이터
+- 참고 링크
+  - [Rollback Segment and Undo Internals](https://www.yumpu.com/en/document/read/10495342/rollback-segment-and-undo-internals-dsvolkru)
+  - [Undo Header Block & Undo Block 스트럭처](http://wiki.gurubee.net/pages/viewpage.action?pageId=9601080)
 
 #### PostgreSQL
+
+![pgsql_tx_id](./../../assets/images/db/mvcc/pgsql_tx_id.PNG)
+출처:exem
 
 - `XID(시간 정보)`를 `t_xmin`과 `t_xmax`를 적절하게 조합하여 사용
   - `XID`
