--- a/docs/_posts/algorithms/2021-08-07-LeetCode-937.md
+++ b/docs/_posts/algorithms/2021-08-07-LeetCode-937.md
@@ -1,5 +1,5 @@
 ---
-title: 937. Reorder Data in Log Files
+title: 937 Reorder Data in Log Files
 author: aimpugn
 date: 2021-08-07 02:00:00+0900
 use_math: true
