db 공부. 어렵다

--- a/docs/_posts/database/2021-07-25-db-mvcc.md
+++ b/docs/_posts/database/2021-07-25-db-mvcc.md
@@ -23,6 +23,11 @@ categories: [db, mvcc]
       - [`MGA` 예제](#mga-예제)
     - [두번째 흐름](#두번째-흐름)
       - [`Rollback segment` 예제](#rollback-segment-예제)
+  - [트랜잭션](#트랜잭션)
+    - [샘플 트랜잭션: 계좌의 debit(차변)/credit(대변)](#샘플-트랜잭션-계좌의-debit차변credit대변)
+    - [오라클의 락과 데드락](#오라클의-락과-데드락)
+      - [`lock`?](#lock)
+      - [`deadlock`?](#deadlock)
   - [DBMS별 MVCC 메커니즘 비교](#dbms별-mvcc-메커니즘-비교)
     - [비교 내용](#비교-내용)
       - [TX 식별자](#tx-식별자)
@@ -38,8 +43,20 @@ categories: [db, mvcc]
       - [Oracle](#oracle)
       - [PostgreSQL](#postgresql)
       - [MySQL/InnoDB](#mysqlinnodb)
+    - [Old Version의 저장위치와 포인터](#old-version의-저장위치와-포인터)
+      - [Oracle - Old Version](#oracle---old-version)
+      - [PostgreSQL - Old Version](#postgresql---old-version)
+    - [데이터 블록 내의 레코드 관리](#데이터-블록-내의-레코드-관리)
+      - [Oracle와 PostgreSQL 레코드 관리](#oracle와-postgresql-레코드-관리)
+    - [트랜잭션의 COMMIT 후 처리](#트랜잭션의-commit-후-처리)
+      - [오라클의 커밋 후 처리](#오라클의-커밋-후-처리)
+      - [PostgreSQL의 커밋 후 처리](#postgresql의-커밋-후-처리)
+    - [Readview](#readview)
 
 # RDBMS와 MVCC 아키텍처
+
+- `Oracle, PostgreSQL, MySQL Core Architecture`, `Oracle, PostgreSQL, MySQL Core Architecture II` 책 공부
+- 주로 PostgreSQL 위주로 정리. 오라클이 앞에 있어서 먼저 보는데 오라클 문서 보다 생을 마감할 거 같다...
 
 ## MVCC 아키텍처의 발전
 
@@ -218,6 +235,51 @@ PAGE HEADER
   - `Consistent`? 일관된, 언행이 일치된, 모순이 없는
   - Consistent Read 위해서, SELECT 시점에 SCN을 비교해서 Undo Segment에 존재하는 해당 Old Versions을 찾아서 버퍼 캐시에 CR 블록 생성
 
+## 트랜잭션
+
+### [샘플 트랜잭션: 계좌의 debit(차변)/credit(대변)](https://docs.oracle.com/cd/E11882_01/server.112/e40540.pdf)
+
+- Savings 계좌의 금액 감소
+- Checking 계좌의 금액 증가
+
+|     | DML                     |                                                     |                      |          비고           |
+| --- | ----------------------- | --------------------------------------------------- | -------------------- | :---------------------: |
+| 1   | UPDATE savings_accounts | SET balance = balance - 500                         | WHERE account = 3209 | Savings 계좌 금액 감소  |
+| 2   | UPDATE savings_accounts | SET balance = balance + 500                         | WHERE account = 3208 | Checking 계좌 금액 증가 |
+| 3   | INSERT INTO journal     | VALUES (journal_seq.NEXTVAL, '1B', 3209, 3208, 500) |                      |  트랜잭션 저널에 기록   |
+| 4   | COMMIT WORK             |                                                     |                      |      트랜잭션 종료      |
+
+### 오라클의 락과 데드락
+
+#### `lock`?
+
+| lock        |                                                                                           |                                                                  |
+| ----------- | ----------------------------------------------------------------------------------------- | ---------------------------------------------------------------- |
+| DML Lock    | 데이터 보호. 테이블 락은 테이블 전체를 잠그고, 로우 락은 선택된 로우만 잠근다             | Row Lock(TX), Table Lock(TM)                                     |
+| DDL Lock    | 스키마 오브젝트의 구조를 보호. 가령 테이블과 뷰의 데이터 사전 정의(Dictionary definition) | `Exlusive DDL Locks`, `Share DDL Locks`, `Breakable Parse Locks` |
+| System Lock | `data file` 같은 내부 데이터베이스 구조 보호.                                             | `Latches`, `Mutexes`, `Internal Locks`                           |
+
+#### `deadlock`?
+
+- 둘 이상의 사용자가 각 상대발에 의해 잠긴(locked) 데이터를 기다리는 상황으로, 트랜잭션이 진행되는 것을 막는다
+
+| 시간 | Session1                     | Session2                  |                                                                       |
+| ---- | ---------------------------- | ------------------------- | --------------------------------------------------------------------- |
+| t0   | UPDATE employees             | UPDATE employees          | 각 트랜잭션은 수정하려는 로우를 잠그고 있으므로 문제 없다             |
+|      | SET salary = salary * 1.1    | SET salary = salary * 1.1 |                                                                       |
+|      | WHERE employees_id = 100;    | WHERE employees_id = 200; |                                                                       |
+|      | 1 row updated.               | 1 row updated.            | 나중에 데드락으로 롤백할 때 이 시점의 변경 사항은 **롤백하지 않는다** |
+| t1   | UPDATE employees             | UPDATE employees          | 데드락 발생                                                           |
+|      | SET salary = salary * 1.1    | SET salary = salary * 1.1 | `employees_id=100`은 Session1이 잠그고 있고,                          |
+|      | WHERE employees_id = 200;    | WHERE employees_id = 100; | `employees_id=200`은 Session2가 잠그고 있다                           |
+| t2   | ORA-00060: deadlock detected |                           | Session1은 데드락 시그널을 받고 `t1` 시점의 `UPDATE`는 롤백된다       |
+|      | while waiting for resource   |                           | 오직 한 세션만 데드락 에러를 받으며, 둘 중 한 세션이 받을 수 있다     |
+| t3   | SQL> COMMIT;                 |                           | `t0` 시점의 수정 사항을 커밋하고 Session1의 트랜잭션이 끝난다         |
+|      | Commit complete.             |                           | `t1` 시점의 수정 사항은 커밋되지 않는다                               |
+| t4   |                              | 1 row updated.            | `t1` 시점에 Session1에 의해 막혔던 Session2의 `UPDATE`가 실행된다     |
+| t5   |                              | SQL> COMMIT;              | `t0`과 `t1` 시점의 수정 사항이 커밋되고 Session2는 종료               |
+|      |                              | Commit complete.          |                                                                       |
+
 ## DBMS별 MVCC 메커니즘 비교
 
 ### 비교 내용
@@ -229,19 +291,19 @@ PAGE HEADER
     - 무엇을? 트랜잭션 테이블의 위치정보인 `XID(위치 정보)`를
     - 어디에? 블록의 `ITL`에 저장
   - TX 완료:
-    - 무엇을? TX 수행되면서 증가하는 `SCN(시간 정보)`을
+    - 무엇을? TX 수행되면서 증가하는 `SCN(시간관련정보)`을
     - 어디에? `트랜잭션 테이블`과 `ITL`에 저장
 - PostgreSQL
   - TX 시작:
-    - 무엇을? TX 수행되면서 증가하는 `XID(시간 정보)`
+    - 무엇을? TX 수행되면서 증가하는 `XID(시간관련정보)`
     - 어디에? `튜플 헤더`에
     - 어떻게? `t_xmin`, `t_xmax` 컬럼에 저장
 - MySQL
   - TX 시작:
-    - 무엇을? TX 수행되면서 증가하는 `TRX_ID(시간 정보)`를
+    - 무엇을? TX 수행되면서 증가하는 `TRX_ID(시간관련정보)`를
     - 어디에? `레코드 헤더`에 저장
   - TX 완료:
-    - 무엇을? `TRX_ID(시간 정보)`를
+    - 무엇을? `TRX_ID(시간관련정보)`를
     - 어디에? `언두 블록`에 저장
 
 #### Old Version 저장 위치
@@ -274,7 +336,7 @@ PAGE HEADER
 - PostgreSQL: 튜플헤더 `t_nfomask` 칼럼에 상태정보 업데이트
 - MySQL:
   - 페이지 클린 아웃 없음.
-  - `언두 블록`의 `TRX_NO` 컬럼에 `TRX_ID(시간 정보)` 저장
+  - `언두 블록`의 `TRX_NO` 컬럼에 `TRX_ID(시간관련정보)` 저장
   - `히스터리 리스트` 등록
   - `TRX_SYS`의 `TRX_STRUCTURE` 더블 링크트 리스트에서 제외
 
@@ -300,19 +362,75 @@ PAGE HEADER
 
 ### 트랜잭션 처리 위한 ID
 
+|              | 위치정보 | 시간관련정보 |
+| ------------ | -------- | ------------ |
+| Oracle       | `XID`    | `SCN`        |
+| PostgreSQL   |          | `XID`        |
+| MySQL/InnoDB |          | `TRX_ID`     |
+
 #### Oracle
 
-![oracle_tx_id](./../../assets/images/db/mvcc/oracle_tx_id.PNG)
-출처:exem
+- [데이터 블록, 익스텐트, 세그먼트](https://docs.oracle.com/cd/B19306_01/server.102/b14220/logical.htm)
+
+[![F2-1. oracle_segment, extent, data blocks](../assets/images/db/../../../../assets/images/db/oracle/F2-1.oracle_segment,%20extent,%20data%20blocks.gif)](https://docs.oracle.com/cd/B19306_01/server.102/b14220/logical.htm#CHDGJJEJ)
+![F12-1. logical and physical storage](../assets/images/db/../../../../assets/images/db/oracle/F12-1.%20logical%20and%20physical%20storage.gif)
+[![F12-2 Segments, Extents, and Data Blocks Within a Tablespace](../assets/images/db/../../../../assets/images/db/oracle/F12-2%20Segments,%20Extents,%20and%20Data%20Blocks%20Within%20a%20Tablespace.gif)](https://docs.oracle.com/cd/E11882_01/server.112/e40540/logical.htm#CNCPT301)
+
+- [`data block`](https://docs.oracle.com/cd/E11882_01/server.112/e40540/glossary.htm#i432306)?
+  - 오라클 데이터베이스에서 논리적으로 가장 작은 단위
+  - 한 데이터 블록은 물리적인 디스크 공간 내 특정 수의 바이트에 해당한다
+- [`extent`](https://docs.oracle.com/cd/E11882_01/server.112/e40540/glossary.htm#i432386)?
+  - 특정 타입의 정보를 저장하기 저장하기 위해 할당된 논리적으로 연속된 데이터 블록 집합
+- [`segment`](https://docs.oracle.com/cd/E11882_01/server.112/e40540/glossary.htm#i432714)?
+  - [테이블](https://docs.oracle.com/cd/E11882_01/server.112/e40540/glossary.htm#i432801) 같은 특정한 데이터베이스 오브젝트를 위해 할당된 익스텐트의 집합
+  - 각 `segment`는 오직 하나의 테이블 스페이스에 속한다. 즉, 어떤 `segment`의 `extent`들도 모두 같은 테이블스페이스에 저장된다
+- [`tablespace`](https://docs.oracle.com/cd/E11882_01/server.112/e40540/glossary.htm#i996731)?
+  - 데이터베이스 저장 단위
+  - 논리적으로 함께 연관된 구조들을 그룹화 한다
+  - 데이터베이스의 [`data file`](https://docs.oracle.com/cd/E11882_01/server.112/e40540/glossary.htm#CHDHJCCC)이 `tablespace`에 저장된다
+
+- [Introduction to Automatic Undo Management](https://docs.oracle.com/cd/B19306_01/server.102/b14220/logical.htm#CHDGJJEJ)
+  - 데이터베이스의 변화를 무효화하기 위해 undo 사용
+  - 오라클은 다음을 위해 undo를 사용
+    - active transaction를 **롤백**
+    - termincated transaction을 **복구**
+    - 읽기 일관성(read consistency) 제공
+    - 논리적 오염(logical corruptions)으로부터의 복구
+  - 자동 언두 관리는 `undo tablespace`를 기반으로 하며, 롤백 세그먼트를 다양한 크기로 할당하기보다는, 언두 테이블스페이스의 형식으로 공간을 할당한다
+
+```mermaid
+erDiagram
+    undo_tablespace ||--o{ undo_segments : has
+    undo_segments ||--o{ transaction-table : has
+    transaction-table {
+      string transaction_ID
+    }
+
+```
+
+```sql
+SQL> UPDATE hr.employees SET salary=salary;
+107 rows updated.
+SQL> SELECT 
+  XID AS "txn id", 
+  XIDUSN AS "undo seg", 
+  XIDSLOT AS "slot",
+  XIDSQN AS "seq", STATUS AS "txn status"
+FROM V$TRANSACTION;
+
+txn id undo seg slot seq txn status
+---------------- ---------- ---------- ---------- ----------------
+0600060037000000 6 6 55 ACTIVE
+```
 
 - XID 생성 $\to$ 언두 헤더의 TX 테이블에 저장 $\to$ SCN을 언두 헤더에 저장 $\to$ 최신 데이터에 유지되던 SCN과 언두 블록의 SCN을 비교하여 예전 데이터로 찾아간다
-- `XID(공간 정보)`와 `SCN(시간 정보)`를 적절하게 조합하여 사용
+- `XID(공간 정보)`와 `SCN(시간관련정보)`를 적절하게 조합하여 사용
   - `XID`:
     - 언두 정보가 기록되는 *위치*에 관한 정보
     - 언제? 트랜잭션 시작 시 할당
-    - 어떻게? `Undo Segment#` + `Slot#` + `Wrap#`
+    - 어떻게? `Undo Segment Number` + `Slot` + `Sequence number`
   - `SCN(System Change Number)`
-    - 시간에 따라 증가하는 시간 정보
+    - 시간에 따라 증가하는 시간관련정보
     - 언제? 트랜잭션 COMMIT 시 할당
     - 어떻게? 6 Bytes 데이터
 - 참고 링크
@@ -324,7 +442,7 @@ PAGE HEADER
 ![pgsql_tx_id](./../../assets/images/db/mvcc/pgsql_tx_id.PNG)
 출처:exem
 
-- `XID(시간 정보)`를 `t_xmin`과 `t_xmax`를 적절하게 조합하여 사용
+- `XID(시간관련정보)`를 `t_xmin`과 `t_xmax`를 적절하게 조합하여 사용
   - `XID`
     - 언제? 트랜잭션 시작 시점에만 할당
     - INSERT 시? `t_xmin`에 저장
@@ -333,12 +451,90 @@ PAGE HEADER
 
 #### MySQL/InnoDB
 
-- `TRX_ID(시간 정보)`
+- *위치정보*와 *시간관련정보* 분리되어 있지 않다
+- `TRX_ID(시간관련정보)`
   - 언제? 트랜잭션 시작 시점
   - 어디에? `페이지의 데이터 레코드`에 저장
 - `TRX_NO`
   - 언두 블록을 회수하기 위한 비교 시점으로 사용
   - 언제? COMMIT 시
   - 무엇을? `TRX_ID`를
-  - 어디에? 언두 블록의 `TRX_NO` 컬럼에 저장
+  - 어디에?
+    - 언두 블록의 `TRX_NO` 컬럼에 저장.
+    - UNDO_BLOCK['`TRX_NO`'] = `TRX_ID`
 - 레코드의 Visibility는 세션마다 생성되는 Readview의 `Up_Limit_ID`, `Low_Limit_ID`, `Active TX List`에 의해 결정
+
+### Old Version의 저장위치와 포인터
+
+#### Oracle - Old Version
+
+- 데이터 블록의 데이터 레코드 업데이트 시
+  - 트랜잭션의 상태 정보 $\to$ *언두 헤더 트랜잭션 테이블*에 기록
+  - Old Version $\to$ *언두 블록*에 기록
+  - Old Versions의 위치 정보
+    - $\to$ 데이터 블록의 ITL의 UBA 컬럼
+    - $\to$ 트랜잭션 테이블의 Slot의 UBA 컬럼
+- SELECT에서 Old Versions 필요
+  - 언두 블록 $\to$ Old Version $\to$ 버퍼캐시 $\to$ CR 블록
+
+#### PostgreSQL - Old Version
+
+- 데이터 튜플 업데이트
+  - 동일한 데이터 페이지 내에 Old Tuple와 New Tuple 저장
+  - `t_ctid`는 New Version의 위치를 가리킨다
+- SELECT에서 Old Versions 필요
+  - `t_ctid` 컬럼에 저장된 New Version의 위치를 찾아간다
+- SELECT 시점에는 Snapshot Structure를 가지고 아래 세 값을 비교하여 튜플의 visibility 결정
+  - `SELECT XID`
+  - `t_xmin`의 XID
+  - `t_xmax`의 XID
+
+### 데이터 블록 내의 레코드 관리
+
+- DBMS는 기본적으로 데이터 레코드를 `블록` 또는 `페이지`라 불리는 단위 구조에 저장
+- 스토리지와 메모리 버퍼 간의 SELECT와 WRITE할 때에도 이 `블록` 단위로 I/O
+- `블록`의 크기는 8K 또는 16K 주로 사용하지만 내부 구조는 DBMS마다 다르며 구조에 따라 트랜잭션 처리 및 각 DBMS의 주요 특성 결정
+
+#### Oracle와 PostgreSQL 레코드 관리
+
+- `INSERT` 시 `블록` 아래쪽부터 차례대로 저장
+- `블록 헤더`에에는 새로운 레코드를 가리키는 포인터가 차례대로 생긴다
+
+### 트랜잭션의 COMMIT 후 처리
+
+#### 오라클의 커밋 후 처리
+
+- 커밋되면 트랜잭션 테이블에서
+  - 해당 슬롯의 상태 값을 `10(Active)` $\to$ `9(Committed)`로 변경
+  - `SCN` 칼럼에 `커밋 시점의 SCN` 기록
+  - 블록 클린 아웃
+    - 데이터 블록의 `ITL`: `Flag`, `Lock`, `Scn/Fsc` 칼럼을 커밋 시의 값으로 정리
+    - 데이터 블록: `Lock Byte` 칼럼을 커밋 시의 값으로 정리
+- Delayed Block Cleanout
+  - 클린 아웃 대상이 과다하면 메모리 있는 일부 블록들만 우선적으로 클린아웃 하고 나머지 블록은 향후 SELECT 시에 클린 아웃
+
+#### PostgreSQL의 커밋 후 처리
+
+- `UPDATE` 시
+  - Old Version이 `DELETE` 되고
+  - New Version이 `INSERT` 된다
+  - 이를 구분하기 위해 `t_infomask` 칼럼의 상위 4bits를 사용(`0010(0x2)`)
+- 커밋되면 튜플 헤더의 `t_infomask` 칼럼에서
+  - 첫 바이트의 하위 4bit에 COMMIT, ABORT 등 상태값 정리
+  - 첫 바이트의 상위 4bit는
+    - `DELETE` 시의 `DELETE bit`와
+    - `UPDATE` 시의 `DELETE bit`를 구분
+
+| COMMAND  | COMMIT 여부 | xmax invalid/aborted | xmax committed | xmin invalid/aborted | xmin committed | value                                 |
+| -------- | ----------- | -------------------- | -------------- | -------------------- | -------------- | ------------------------------------- |
+| `INSERT` | X           | 1                    | 0              | 0                    | 0              | $2^{3}$ = 8                           |
+| `INSERT` | O           | 1                    | 0              | 0                    | 1              | $2^{3} + 2^{0}$ = 9                   |
+| `DELETE` | X           | 0                    | 0              | 0                    | 1              | $2^{0}$ = 1                           |
+| `DELETE` | O           | 0                    | 1              | 0                    | 1              | $2^{2} + 2^{0}$ = 5                   |
+| `FROZEN` |             | 1                    | 0              | 1                    | 1              | $2^{3} + 2^{1} + 2^{0}$ = 11 = B(hex) |
+
+### Readview
+
+- `Readview(Snapshop)`?
+  - 쿼리 시작 시점의 액티브 트랜잭션들의 집합을 저장
+- PostgreSQL은 트랜잭션 시작 시 트랜잭션의 식별자만을 레코드 헤더에 저장하므로 MVCC 구현 위해서하는 반드시 필요
