--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -8,6 +8,8 @@ categories: [db, postgres]
 
 # Shared Buffer 동작 원리
 
+- from PostgreSQL 9.6 성능 이야기
+
 ## 개요
 
 - 디스크에서 데이터 읽기/쓰기하는 것보다 메모리에서 읽기/쓰기하는 게 더 빠르며, 이를 위해 PostgreSQL에서는 `shared_buffer`로 제어되는 공유 버퍼를 사용
@@ -55,7 +57,7 @@ stateDiagram-v2
   - 버퍼에 있다면 해당 블록을 찾는 속도
 - 자료구조의 형태가 중요하며, shared buffer는 이 목표를 위한 노력의 결과물
 
-### 많은 상요자가 동시 접근 시 경합 최소화
+### 많은 사용자가 동시 접근 시 경합 최소화
 
 - 공유 자원 보호 위해 Lock 메커니즘이 필수
 - Lock의 경합 최소화 위해 여러 Lock 사용 방식 필요
