--- a/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
+++ b/docs/_posts/database/2021-08-08-postgres-2.shared_buffer.md
@@ -90,6 +90,7 @@ stateDiagram-v2
   bucket3 --> directory3
   bucketn_1 --> directoryn_1
   bucketn --> directoryn
+  
   state HashTable {
     bucket0: Bucket 0 [0-255]
     bucket1: Bucket 1 [0-255]
@@ -98,13 +99,14 @@ stateDiagram-v2
     bucketn_1: Bucket N-1 [0-255]
     bucketn: Bucket N [0-255]
   }
+
   state Directory{
-    directory0
-    directory1
-    directory2
-    directory3
-    directoryn_1:
-    directoryn
+    directory0: 디렉토리
+    directory1: 디렉토리
+    directory2: 디렉토리
+    directory3: 디렉토리
+    directoryn_1: 디렉토리
+    directoryn: 디렉토리
   }
 ```
 
@@ -121,7 +123,7 @@ stateDiagram-v2
 
 #### 해시 테이블 크기와 해시 세그먼트
 
-```c
+```c++
 // src/backend/utils/hash/dynahash.c
 #define DEF_SEGSIZE         256
 #define DEF_SEGSIZE_SHIFT   8 /* must be log2(DEF_SEGSIZE) */
@@ -129,13 +131,13 @@ stateDiagram-v2
 #define DEF_FFACTOR         1 /* default fill factor */
 ```
 
-```c
+```c++
 // src/include/storage/lwlock.h
 /* Number of partitions of the shared buffer mapping hashtable */
 #define NUM_BUFFER_PARTITIONS  128
 ```
 
-```c
+```c++
 // src/backend/utils/hash/dynahash.c
 /*
  * Top control structure for a hashtable --- in a shared table, each backend
@@ -162,6 +164,15 @@ struct HTAB
   long              ssize;        /* segment size --- must be power of 2 */
   int               sshift;       /* segment shift = log2(ssize) */
 };
+
+/* calculate first power of 2 >= num, bounded to what will fit in an int */
+static int
+next_pow2_int(long num)
+{
+ if (num > INT_MAX / 2)
+  num = INT_MAX / 2;
+ return 1 << my_log2(num); /* my_log2: calculate ceil(log base 2) of num */
+}
 
 /*
  * Compute derived fields of hctl and build the initial directory/segment
@@ -242,6 +253,41 @@ init_htab(HTAB *hashp, long nelem)
   hctl->nelem_alloc = choose_nelem_alloc(hctl->entrysize);
 }
 ```
+
+- 조건: **Shared Buffer가 1 GiB**
+- `nbuckets = next_pow2_int((nelem - 1) / hctl->ffactor + 1);`
+  - `nbuckets`?
+    - 해시 테이블 버킷 수
+    - 실제 버퍼 수보다 크게 잡는데, **해시 충돌을 피하기** 위함
+  - `next_pow2_int`?
+    - 입력 값보다 큰 2의 지수 값을 리턴하는 함수
+    - $next\_pow2\_int(((131,200 -1)\div{1}) + 1)$
+    - `(1 << Math.log2(131200)) * 2 = 262,144` = $2^{18}$
+      - 참고로 `1 << {NUM}`하면 $2^{NUM}$이 된다
+  - `nelem`?
+    - 주석에 따르면 *예상되는 최대 엘레먼트 수(maximum number of elements expected)*. 해시 테이블의 버킷 수 계산 위한 입력 값으로 사용.
+    - 버퍼 수 + `NUM_BUFFER_PARTITIONS`
+    - 버퍼 수는 131,072 + NUM_BUFFER_PARTITIONS 128 = 131,200
+      - 1 GiB 버퍼 수 계산법
+        - $1 GiB(= 2^{30}= 1024^{3}$) / $8 KiB(= 2^{10} = 1024^{1})$
+        - = $2^{10\times{2}} / 2^{3} = 2^{17} = 131,072$
+  - [`ffactor`](https://www.cybertec-postgresql.com/en/what-is-fillfactor-and-how-does-it-affect-postgresql-performance/)?
+    - 이 값에 따라 버킷의 수를 결정. 2의 거듭제곱으로 증가
+    - fillfactor의 기본값은 1
+    - ffactor 증가 $\to$ 버킷 수 감소 $\to$ 해시 충돌 가능성 증가
+    - ffactor 감소 $\to$ 버킷 수 증가 $\to$ 해시 충돌 가능성 감소(GOOD)
+- `hctl->max_bucket = hctl->low_mask = nbuckets - 1;`
+  - `max_bucket`?
+    - 해시 테이블 버킷 수(= 배열의 크기)
+    - 배열의 인덱스는 0부터 시작하므로 `nbuckets - 1`로 설정
+- `nsegs = (nbuckets - 1) / hctl->ssize + 1;`
+  - `nsegs`?
+    - 해시 세그먼트 개수. 주석에 따르면 필요한 디렉토리 세그먼트의 개수.
+  - 계산?
+    - `nbuckets`은 262,144(`(1 << Math.log2(131200)) * 2`).
+    - $((262,144 -1)\div{256}) + 1$
+- `nsegs = next_pow2_int(nsegs);`
+  - next_pow2_int(nsegs) = next_pow2_int(1024) = 1024(`1 << Math.log2(1024) = 1024`)
 
 ## 기타
 
